--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1006,7 +1006,18 @@ form {
 			}
 
 /* List */
-
+/* Heart beat animation */
+@keyframes beat{
+	to { transform: scale(1.1); }
+}
+.donate_button {
+animation: beat .5s infinite alternate;
+}
+.donate_button:hover {
+	background: #6bb8d112;
+	border-radius: 40px;
+	
+	}
 	ul.default {
 		list-style: disc;
 		padding-left: 1em;
